Add google sign in

--- a/resources/public/nightcoders.html
+++ b/resources/public/nightcoders.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="google-signin-client_id" content="304442508042-58fmu8pd2u2l5irdbajiucm427aof93r.apps.googleusercontent.com">
+        <title>Nightcoders</title>
+        <link rel="stylesheet" type="text/css" href="nightcoders.css">
+        <script src="https://apis.google.com/js/platform.js"></script>
     </head>
     <body>
         <span id="app"></span>
