--- a/resources/public/loading-code.html
+++ b/resources/public/loading-code.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <span id="app"></span>
-        <script type="text/javascript" src="loading.js"></script>
+        <script type="text/javascript" src="nightcoders-loading.js"></script>
+        <script type="text/javascript">nightcoders.loading.authenticate();</script>
     </body>
 </html>
