Revert "Add loading spinner when waiting for app to load"
This reverts commit 2f5da16ad91b57a3d0578dc60af5e4c19b4a8ed4.

--- a/resources/public/loading.html
+++ b/resources/public/loading.html
@@ -9,7 +9,6 @@
     </head>
     <body>
         <span id="app"></span>
-        <script type="text/javascript" src="nightcoders-loading.js"></script>
-        <script type="text/javascript">nightcoders.loading.authenticate();</script>
+        <script type="text/javascript" src="loading.js"></script>
     </body>
 </html>
