Improve loading screen

--- a/resources/leiningen/new/basic_web/index.html
+++ b/resources/leiningen/new/basic_web/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
-	<div id="content"></div>
-	<script src="main.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>{{app-name}}</title>
+    </head>
+    <body>
+        <div id="content"></div>
+        <script src="main.js"></script>
+    </body>
 </html>
