--- a/resources/public/refresh.html
+++ b/resources/public/refresh.html
@@ -5,6 +5,7 @@
         <title>Loading...</title>
     </head>
     <body>
+        Please wait...
         <script type="text/javascript">
             setTimeout(function() { location.reload(); }, 3000);
         </script>
