Allow people to use the old version

--- a/resources/public/refresh.html
+++ b/resources/public/refresh.html
@@ -5,7 +5,8 @@
         <title>Loading...</title>
     </head>
     <body>
-        Please wait...
+        <p>Please wait while the website is built...</p>
+        <p>If this takes too long, there may be an old version <a href="index-old.html">here</a>.</p>
         <script type="text/javascript">
             setTimeout(function() { location.reload(); }, 3000);
         </script>
