--- a/resources/public/refresh.html
+++ b/resources/public/refresh.html
@@ -5,7 +5,7 @@
         <title>Loading...</title>
     </head>
     <body>
-        <p>Please wait while the website is built...</p>
+        <p>Please wait while the project is built...</p>
         <p>If this takes too long, there may be an old version <a href="index-old.html">here</a>.</p>
         <script type="text/javascript">
             setTimeout(function() { location.reload(); }, 3000);
