--- a/resources/public/nightcoders.html
+++ b/resources/public/nightcoders.html
@@ -9,6 +9,8 @@
         <script src="https://apis.google.com/js/platform.js"></script>
     </head>
     <body>
+        <center><h1>Nightcoders.net</h1></center>
+        <center><p>A cloud IDE for ClojureScript</p></center>
         <span id="app"></span>
         <script type="text/javascript" src="nightcoders.js"></script>
     </body>
