--- a/resources/public/nightcoders.html
+++ b/resources/public/nightcoders.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="google-signin-client_id" content="304442508042-58fmu8pd2u2l5irdbajiucm427aof93r.apps.googleusercontent.com">
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-        <title>Nightcoders</title>
+        <title>Nightcoders.net</title>
         <link rel="stylesheet" type="text/css" href="nightcoders.css">
         <script src="https://apis.google.com/js/platform.js"></script>
     </head>
