Add github ribbon

--- a/resources/public/nightcoders.html
+++ b/resources/public/nightcoders.html
@@ -9,6 +9,11 @@
         <script src="https://apis.google.com/js/platform.js"></script>
     </head>
     <body>
+        <a href='https://github.com/oakes/Nightcoders.net'>
+        	<img style='position: absolute; top: 0; right: 0; border: 0;'
+        	src='https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png' alt='Fork
+me on GitHub'>
+        </a>
         <center><h1>Nightcoders.net</h1></center>
         <center><p>A cloud IDE for ClojureScript</p></center>
         <span id="app"></span>
