Add noindex meta tag

--- a/resources/public/nightcoders.html
+++ b/resources/public/nightcoders.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="robots" content="noindex">
         <meta name="google-signin-client_id" content="304442508042-58fmu8pd2u2l5irdbajiucm427aof93r.apps.googleusercontent.com">
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
         <title>Nightcoders.net</title>
